[package]
name = "obliviousdb"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "search_trees"
harness = false
